--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "@testing-library/user-event": "^13.5.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "json-server":"^0.16.3",
+    "json-server": "^0.16.3",
     "mysql2": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -20,8 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "fake-api":"json-server --watch src/API/db.json --port 5000"
-
+    "fake-api": "json-server --watch src/API/db.json --port 5000"
   },
   "eslintConfig": {
     "extends": [
