--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mysql2": "^3.2.0",
     "npm": "^9.6.5",
     "react": "^16.14.0",
+    "react-datepicker": "^4.11.0",
     "react-dom": "^16.14.0",
     "react-lottie": "^1.2.3",
     "react-router-dom": "^6.10.0",
