--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "react-datepicker": "^4.11.0",
     "react-dom": "^16.14.0",
     "react-lottie": "^1.2.3",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "redux-thunk": "^2.4.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
